--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -175,7 +175,7 @@
   <!-- End wrapper -->
 
 <div class="artwork">
-  <div class="bottombar"></div>
+  <div class="bottom_bar"></div>
   <div class="vertical_tag"></div>
   <div class="art_head"></div>
   <div class="flower_bird"></div>
