--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -849,35 +849,32 @@ ul.tabs { zoom: 1; }
 /*      SECTION 7      */
 /* =================== */
 .toolbar-wrapper {
-  height: 58px;
+  height: 40px;
   width: 100% !important;
   padding: 0;
   background: #000;
 }
 .toolbar {
+  width: 98%;
   border: 0;
 }
 .toolbar a {
   color: #fff;
+}
+.toolbar li {
+  line-height: 40px;
 }
 .toolbar a:hover {
   color: #fff;
   opacity: 0.7;
 }
 
-.toolbar .search_box {
-  background: #fff;
-}
-.toolbar .search_box:focus {
-  background: #fff;
-}
-
 .logo {
   padding: 0;
 }
 .logo img {
-  max-width: 300px;
-  max-height: 200px;
+  max-width: 180px;
+  max-height: 120px;
 }
 
 nav {
