--- a/snippets/customer-links.liquid
+++ b/snippets/customer-links.liquid
@@ -6,7 +6,7 @@
       {{ 'Log in' | customer_login_link }}
       {% if shop.customer_accounts_optional %}
       <span class="or">or</span>
-      {{ 'Create an account' | customer_register_link }}
+      {{ 'Register' | customer_register_link }}
       {% endif %}
     </li>
   {% endif %}
