--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -135,7 +135,9 @@
             <div class="nav-links">
               <section id="nav">
                 <nav class="main">
+                  <div class="mainbefore"></div>
                   {% include 'dropdown' %}
+                  <div class="mainafter"></div>
                 </nav> 
                 <nav class="mobile clearfix">
                   {% include 'mobile-menu' %}
