--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -920,6 +920,7 @@ body {
   height: 30px;
   width: 100%;
   background: url({{'pattern.png' | asset_url}}) repeat-x;
+  margin-bottom:20px;
 }
 .bottom_bar {
   height: 72px;
@@ -945,6 +946,7 @@ body {
   position: fixed;
   right: 0;
   bottom: 0;
+  opacity:0.7;
   background: url({{'brush.png' | asset_url}}) no-repeat;
   background-size: 100%;
 }
@@ -965,6 +967,7 @@ body {
   position: absolute;
   right: 0;
   top: 40px;
+  opacity:0.9;
   background: url({{'art_head.png' | asset_url}}) no-repeat;
   background-size: 100%;
 }
