--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -1004,6 +1004,16 @@ line-height: 36px;
 font-weight: 400;
 }
 
+.wrapper { width: 996px; margin: 0 auto; padding: 0 15px; 
+
+}
+
+.collection-title{font-size:18px;}
+
+.row {
+margin: 0 0 8px 0;
+}
+
 @media only screen and (max-width: 797px) {
   .artwork {display:none;}
   .nav-logo {display:none;}
