--- a/assets/styles.scss.liquid
+++ b/assets/styles.scss.liquid
@@ -1010,8 +1010,18 @@ font-weight: 400;
 
 .collection-title{font-size:18px;}
 
+#collection{
+   background: url({{'wrapper_bg.png' | asset_url}}) repeat;
+}
 .row {
 margin: 0 0 8px 0;
+}
+
+
+footer h4 {
+
+border-bottom: 1px dashed #494949;
+
 }
 
 @media only screen and (max-width: 797px) {
