--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -126,9 +126,9 @@ em { font-style: italic; }
 
 /* 1.7 - Icons */
 .icon-social { float: left; display: block; width: 32px; height: 32px; overflow: hidden; text-indent: -9999px; margin-right: 10px; margin-bottom: 10px;}
-.icon-social { background: url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/social-icons-light-bg.png?1973') no-repeat; }
+.icon-social { background: url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/social-icons-light-bg.png?4072') no-repeat; }
 @if (lightness(#ffffff) < lightness(#999)) {
-  .icon-social { background-image: url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/social-icons-dark-bg.png?1973'); }
+  .icon-social { background-image: url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/social-icons-dark-bg.png?4072'); }
 }
 
 
@@ -156,7 +156,7 @@ em { font-style: italic; }
 
 .icon-facebook { float: left; margin-top: 1px; width: 40px; overflow: hidden; }
 .icon-cart { float: left; display: block; width: 20px; height: 16px; margin: 21px 10px 0 0; opacity: 0.8; filter: alpha(opacity = 60); }
-.icon-cart { background: url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/icon-cart-small.png?1973') no-repeat; background-position: 0 0; }
+.icon-cart { background: url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/icon-cart-small.png?4072') no-repeat; background-position: 0 0; }
 @if (lightness(#ffffff) < lightness(#999)) {
   .icon-cart { background-position: 0 -16px; }  
 }
@@ -278,7 +278,7 @@ ul.expanded > li, ol.expanded > li { margin-bottom: 10px; }
 .toolbar #go { position: absolute; width: 14px; height: 14px; border: none; margin: 19px 0 0 4px; box-shadow: none; }
 @if (lightness(#ffffff) < lightness(#999)) {
   .toolbar #go { 
-    background-image: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/icon-search-light.png?1973); 
+    background-image: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/icon-search-light.png?4072); 
     display: block;
     -moz-box-sizing: border-box;
     box-sizing: border-box; 
@@ -349,7 +349,7 @@ nav { position: relative; border-top:1px solid #dddddd; border-bottom:1px solid 
 nav > ul > li { margin-bottom: 0; }
 nav > ul > li > a { text-decoration: none; color: #888888; display: block; padding: 0 15px; font-size: 17px; line-height: 50px; height: 50px; font-weight: 400; -webkit-transform: rotateZ(0); transform: rotateZ(0); }
 
-nav > ul > li.dropdown > a { padding-right: 15px; margin-right: 10px; background:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/arrow-dark.png?1973') no-repeat 100% 50%; }
+nav > ul > li.dropdown > a { padding-right: 15px; margin-right: 10px; background:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/arrow-dark.png?4072') no-repeat 100% 50%; }
 
 nav > ul > li > a.current { color: #888888; }
 nav > ul > li:hover > a { color: #888888; opacity: 0.7;filter: alpha(opacity = 70);  text-decoration: none; }
@@ -421,7 +421,7 @@ footer .tweet_text a:hover { color: #555555 !important; opacity: 0.7; filter: al
 .featured-product-header { opacity: 0.5; font-size: 11px; text-transform: uppercase;}
 .featured-product-image { width:50%;} 
 
-.sample-product-wrapper { background:#eee url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/blankslate-producticon.png?1973) no-repeat center center; width:100%; height:170px; display:table; text-align:center; color:#aaa; }
+.sample-product-wrapper { background:#eee url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/blankslate-producticon.png?4072) no-repeat center center; width:100%; height:170px; display:table; text-align:center; color:#aaa; }
 .sample-product { display:table-cell; text-align:center; vertical-align:middle; padding:0 10px; font-size:13px }
 
 .helper-note { color: #666; font-size:16px;  padding: 20px; position: absolute; max-width:500px; margin-left:-270px; margin-top:80px; left:50%; z-index:99999; display: none; }
@@ -748,7 +748,7 @@ div.errors { margin-bottom: 15px; }
 /*      SECTION 6      */
 /* =================== */
 /* 6.1 - FancyBox */
-#fancybox-loading{position:fixed;top:50%;left:50%;height:40px;width:40px;margin-top:-20px;margin-left:-20px;cursor:pointer;overflow:hidden;z-index:1104;display:none}* html #fancybox-loading{position:absolute;margin-top:0}#fancybox-loading div{position:absolute;top:0;left:0;width:40px;height:480px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&1973')}#fancybox-overlay{position:fixed;top:0;left:0;bottom:0;right:0;background:#000;z-index:999999;display:none}* html #fancybox-overlay{position:absolute;width:100%}#fancybox-tmp{padding:0;margin:0;border:0;overflow:auto;display:none}#fancybox-wrap{position:absolute;top:0;left:0;margin:0;padding:20px;z-index:999999;display:none}#fancybox-outer{position:relative;width:100%;height:100%;background:#FFF;box-shadow:0 0 20px rgba(0,0,0,0.4);-webkit-box-shadow:0 0 20px rgba(0,0,0,0.4);-moz-box-shadow:0 0 20px rgba(0,0,0,0.4)}#fancybox-inner{position:absolute;top:0;left:0;width:1px;height:1px;padding:0;margin:0;outline:0;overflow:hidden}#fancybox-hide-sel-frame{position:absolute;top:0;left:0;width:100%;height:100%;background:transparent}#fancybox-close{position:absolute;top:-15px;right:-15px;width:30px;height:30px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&1973');background-position:-40px 0;cursor:pointer;z-index:1103;display:none}#fancybox_error{color:#444;font:normal 12px/20px Arial;padding:7px;margin:0}#fancybox-content{height:auto;width:auto;padding:0;margin:0}#fancybox-img{width:100%;height:100%;padding:0;margin:0;border:0;outline:0;line-height:0;vertical-align:top;-ms-interpolation-mode:bicubic}#fancybox-frame{position:relative;width:100%;height:100%;border:0;display:block}#fancybox-title{position:absolute;bottom:0;left:0;font-family:Arial;font-size:12px;z-index:1102}.fancybox-title-inside{padding:10px 0;text-align:center;color:#333}.fancybox-title-outside{padding-top:5px;color:#FFF;text-align:center;font-weight:bold}.fancybox-title-over{color:#FFF;text-align:left}#fancybox-title-wrap{display:inline-block}#fancybox-title-wrap span{height:32px;float:left}#fancybox-title-left{padding-left:15px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&1973');background-position:-40px -90px;background-repeat:no-repeat}#fancybox-title-main{font-weight:bold;line-height:29px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox-x.png?1973');background-position:0 -40px;color:#FFF}#fancybox-title-right{padding-left:15px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&1973');background-position:-55px -90px;background-repeat:no-repeat}#fancybox-left,#fancybox-right{position:absolute;bottom:0;height:100%;width:35%;cursor:pointer;outline:0;z-index:1102;display:none}#fancybox-left{left:0}#fancybox-right{right:0}#fancybox-left-ico,#fancybox-right-ico{position:absolute;top:50%;left:-9999px;width:30px;height:30px;margin-top:-15px;cursor:pointer;z-index:1102;display:block}#fancybox-left-ico{background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&1973');background-position:-40px -30px}#fancybox-right-ico{background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&1973');background-position:-40px -60px}#fancybox-left:hover,#fancybox-right:hover{visibility:visible}#fancybox-left:hover span{left:20px}#fancybox-right:hover span{left:auto;right:20px}
+#fancybox-loading{position:fixed;top:50%;left:50%;height:40px;width:40px;margin-top:-20px;margin-left:-20px;cursor:pointer;overflow:hidden;z-index:1104;display:none}* html #fancybox-loading{position:absolute;margin-top:0}#fancybox-loading div{position:absolute;top:0;left:0;width:40px;height:480px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&4072')}#fancybox-overlay{position:fixed;top:0;left:0;bottom:0;right:0;background:#000;z-index:999999;display:none}* html #fancybox-overlay{position:absolute;width:100%}#fancybox-tmp{padding:0;margin:0;border:0;overflow:auto;display:none}#fancybox-wrap{position:absolute;top:0;left:0;margin:0;padding:20px;z-index:999999;display:none}#fancybox-outer{position:relative;width:100%;height:100%;background:#FFF;box-shadow:0 0 20px rgba(0,0,0,0.4);-webkit-box-shadow:0 0 20px rgba(0,0,0,0.4);-moz-box-shadow:0 0 20px rgba(0,0,0,0.4)}#fancybox-inner{position:absolute;top:0;left:0;width:1px;height:1px;padding:0;margin:0;outline:0;overflow:hidden}#fancybox-hide-sel-frame{position:absolute;top:0;left:0;width:100%;height:100%;background:transparent}#fancybox-close{position:absolute;top:-15px;right:-15px;width:30px;height:30px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&4072');background-position:-40px 0;cursor:pointer;z-index:1103;display:none}#fancybox_error{color:#444;font:normal 12px/20px Arial;padding:7px;margin:0}#fancybox-content{height:auto;width:auto;padding:0;margin:0}#fancybox-img{width:100%;height:100%;padding:0;margin:0;border:0;outline:0;line-height:0;vertical-align:top;-ms-interpolation-mode:bicubic}#fancybox-frame{position:relative;width:100%;height:100%;border:0;display:block}#fancybox-title{position:absolute;bottom:0;left:0;font-family:Arial;font-size:12px;z-index:1102}.fancybox-title-inside{padding:10px 0;text-align:center;color:#333}.fancybox-title-outside{padding-top:5px;color:#FFF;text-align:center;font-weight:bold}.fancybox-title-over{color:#FFF;text-align:left}#fancybox-title-wrap{display:inline-block}#fancybox-title-wrap span{height:32px;float:left}#fancybox-title-left{padding-left:15px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&4072');background-position:-40px -90px;background-repeat:no-repeat}#fancybox-title-main{font-weight:bold;line-height:29px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox-x.png?4072');background-position:0 -40px;color:#FFF}#fancybox-title-right{padding-left:15px;background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&4072');background-position:-55px -90px;background-repeat:no-repeat}#fancybox-left,#fancybox-right{position:absolute;bottom:0;height:100%;width:35%;cursor:pointer;outline:0;z-index:1102;display:none}#fancybox-left{left:0}#fancybox-right{right:0}#fancybox-left-ico,#fancybox-right-ico{position:absolute;top:50%;left:-9999px;width:30px;height:30px;margin-top:-15px;cursor:pointer;z-index:1102;display:block}#fancybox-left-ico{background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&4072');background-position:-40px -30px}#fancybox-right-ico{background-image:url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/fancybox.png?5734&4072');background-position:-40px -60px}#fancybox-left:hover,#fancybox-right:hover{visibility:visible}#fancybox-left:hover span{left:20px}#fancybox-right:hover span{left:auto;right:20px}
 /* 6.2 - FlexSlider */
 .flex-container a:active,.flexslider a:active,.flex-container a:focus,.flexslider a:focus  {outline: none;}
 .slides,.flex-control-nav,.flex-direction-nav {margin: 0; padding: 0; list-style: none;}
@@ -769,7 +769,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000,endCol
 .flex-caption {width: 96%; padding: 2%; margin: 0; position: absolute; left: 0; bottom: 0; background: rgba(0,0,0,.8); color: #fff; text-shadow: 0 -1px 0 rgba(0,0,0,.8); font-size: 14px; line-height: 18px;}
 .flex-direction-nav { height: 0; display: none; }
 .flex-direction-nav li { margin-bottom: 0; }
-.flex-direction-nav li a {width: 50px; height: 50px; display: block; background: url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/slider-arrows.png?47334&1973') no-repeat; position: absolute; top: 44%; cursor: pointer; text-indent: -999em;}
+.flex-direction-nav li a {width: 50px; height: 50px; display: block; background: url('//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/slider-arrows.png?47334&4072') no-repeat; position: absolute; top: 44%; cursor: pointer; text-indent: -999em;}
 .flex-direction-nav li .disabled {opacity: .3; filter:alpha(opacity=30); cursor: default;}
 
 
@@ -791,34 +791,43 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000,endCol
 /*      SECTION 7      */
 /* =================== */
 .toolbar-wrapper {
-  height: 58px;
+  height: 40px;
   width: 100% !important;
   padding: 0;
   background: #000;
 }
 .toolbar {
+  width: 98%;
   border: 0;
 }
 .toolbar a {
-  color: #999;
-}
-.toolbar a:hover {
+  color: #d0d0d0;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
   opacity: 1;
 }
-.toolbar {
-  ::-webkit-input-placeholder { color: #999 !important; }
-  :-moz-placeholder { color: #fff !important; }
+.toolbar li {
+  line-height: 40px;
 }
-.toolbar .search_box:focus { 
-  background: rgba(255,255,255,0.95);
+.toolbar a:hover {
+  cursor: pointer;
+  color: #fff;
+  opacity: 1;
 }
 
 .logo {
   padding: 0;
 }
 .logo img {
-  max-width: 300px;
-  max-height: 200px;
+  max-width: 180px;
+  max-height: 120px;
+}
+.icon-cart { 
+  margin-top: 14px;
+  background-position: 0 -16px; 
+}
+#cart-count {
+  margin-top: 6px;
 }
 
 nav {
@@ -826,40 +835,76 @@ nav {
 }
 
 nav.main {
-  margin: 20px 50px;
-  border: 2px solid #000;
+  position: relative;
+  padding: 0 50px;
+}
+
+nav.main ul {
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/border_middle.png?4072) repeat-x;
+  background-size: 1px 50px;
+}
+
+.mainbefore {
+  position: absolute;
+  left: 0;
+  width: 50px;
+  height: 50px;
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/border_left.png?4072) no-repeat;
+  background-size: 100%;
+}
+.mainafter {
+  position: absolute;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/border_right.png?4072) no-repeat;
+  background-size: 100%;
+  margin-top: -50px;
 }
 
 body {
-  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/bg.png?1973) repeat;
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/bg.png?4072) repeat;
 }
+.product {
+  -webkit-box-shadow: 0 0 4px rgba(7,8,8,.53);
+  -moz-box-shadow: 0 0 4px rgba(7,8,8,.53);
+  box-shadow: 0 0 4px rgba(7,8,8,.53);
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/product_bg.png?4072) repeat;
+  background-size: 25px 25px;
+}
+.product .image {
+  padding: 10px 10px 0 10px;
+}
+.product .details {
+  padding:0 10px 10px 10px;
+}
+
 .footer-wrapper {
   padding-bottom: 100px;
 }
 
 .subbar {
-  height: 58px;
+  height: 30px;
   width: 100%;
-  margin-top: -10px;
-  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/pattern.png?1973) repeat-x;
-  background-size: 100% 58px;
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/pattern.png?4072) repeat-x;
+  margin-bottom:20px;
 }
 .bottom_bar {
-  height: 108px;
+  height: 72px;
   width: 100%;
   position: fixed;
   left: 0px;
   bottom: 0px;
-  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/bottom_bar.png?1973) no-repeat;
-  background-size: 100% 108px;
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/bottom_bar.png?4072) no-repeat;
+  background-size: 100% 72px;
 }
 .flower_bird {
-  height: 350px;
-  width: 214px;
+  height: 234px;
+  width: 143px;
   position: fixed;
   left: 0;
   bottom: 0;
-  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/flower_bird.png?1973) no-repeat;
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/flower_bird.png?4072) no-repeat;
   background-size: 100%;
 }
 .brush {
@@ -868,7 +913,8 @@ body {
   position: fixed;
   right: 0;
   bottom: 0;
-  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/brush.png?1973) no-repeat;
+  opacity:0.7;
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/brush.png?4072) no-repeat;
   background-size: 100%;
 }
 
@@ -877,18 +923,19 @@ body {
   width: 36px;
   position: absolute;
   left: 20px;
-  top: 120px;
-  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/vertical_tag.png?1973) no-repeat;
+  top: 85px;
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/vertical_tag.png?4072) no-repeat;
   background-size: 100%;
 }
 
 .art_head {
-  height: 413px;
-  width: 246px;
+  height: 275px;
+  width: 164px;
   position: absolute;
   right: 0;
-  top: 58px;
-  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/art_head.png?1973) no-repeat;
+  top: 40px;
+  opacity:0.9;
+  background: url(//cdn.shopify.com/s/files/1/0364/9685/t/1/assets/art_head.png?4072) no-repeat;
   background-size: 100%;
 }
 
